2001-04-29  Jody Goldberg <jgoldberg@home.com>

	* src/parser.y (yylex) : return INVALID_TOKEN rather than EOF when a
	  lexical error is found.

	* src/selection.c (sheet_selection_cut) : It is ok for the source
	  region to have merged regions or arrays.  It is NOT ok for the
	  target to have regions that are split.

	* src/cmd-edit.c (cmd_paste) : Only clear the clipboard if the paste
	  was successful.

2001-04-29  Almer S. Tigelaar  <almer@gnome.org>

	* src/commands.c (cmd_zoom) : Implement zoom undo/redo
	(cmd_zoom_destroy) : Idem.
	(cmd_zoom_redo): Idem.
	(cmd_zoom_undo): Idem.

	* src/workbook-control-gui.c (cb_change_zoom):
	Use cmd_zoom here.

2001-04-28  Jody Goldberg <jgoldberg@home.com>

	* src/style-border.c (print_hline) : handle offset of screen coords vs
	  printer coords.
	(print_vline) : ditto.
	(style_borders_row_print) : sync with style_borders_row_draw and pass
	  width to the line drawing to handle different coordinate types.

	* src/ranges.c (range_translate) : warn if clipped not just if
	  removed.

	* src/clipboard.c (clipboard_prepend_cell) : store the source sheet if
	  possible.
	(paste_link) : Use the right sheets.
	(clipboard_paste_region) : send enough information into paste_link.

2001-04-27  Jody Goldberg <jgoldberg@home.com>

	* src/format.c (pre_parse_format) : Catch fractions too.
	(render_number) : don't pass in so many copies of flags.  Just use the
	  info struct.  Add a 'has_fraction' flag to disable rounding.
	(do_render_number) : ditto.
	(stern_brocot) : simple stern brocot tree.  Should really use an
	  adaptive precision but I am lazy.
	(format_number) : add fractions.

	* src/commands.c (cmd_autofill_redo) : changing visiblity can triger a
	  draw which requiresthat things be rendered and spanned.  Be sure to
	  complete the action BEFORE changing visibility.

2001-04-27  Chema Celorio  <chema@celorio.com>

	* src/sheet-object.h: add the header for clone_sheet

	* src/sheet-object.c (sheet_object_clone): implement